@@ -5,7 +5,7 @@
  *                            | (__| |_| |  _ <| |___
  *                             \___|\___/|_| \_\_____|
  *
- * Copyright (C) 1998 - 2005, Daniel Stenberg, <daniel@haxx.se>, et al.
+ * Copyright (C) 1998 - 2006, Daniel Stenberg, <daniel@haxx.se>, et al.
  *
  * This software is licensed as described in the file COPYING, which
  * you should have received as part of this distribution. The terms
@@ -522,40 +522,49 @@ CURLMcode curl_multi_perform(CURLM *multi_handle, int *running_handles)
         break;
 
       case CURLM_STATE_DO:
-        /* Perform the protocol's DO action */
-        easy->result = Curl_do(&easy->easy_conn, &dophase_done);
-
-        if(CURLE_OK == easy->result) {
-
-          if(!dophase_done) {
-            /* DO was not completed in one function call, we must continue
-               DOING... */
-            multistate(easy, CURLM_STATE_DOING);
-            result = CURLM_OK;
-          }
-
-          /* after DO, go PERFORM... or DO_MORE */
-          else if(easy->easy_conn->bits.do_more) {
-            /* we're supposed to do more, but we need to sit down, relax
-               and wait a little while first */
-            multistate(easy, CURLM_STATE_DO_MORE);
-            result = CURLM_OK;
-          }
-          else {
-            /* we're done with the DO, now PERFORM */
-            easy->result = Curl_readwrite_init(easy->easy_conn);
-            if(CURLE_OK == easy->result) {
-              multistate(easy, CURLM_STATE_PERFORM);
-              result = CURLM_CALL_MULTI_PERFORM;
-            }
-          }
+        if(easy->easy_handle->set.connect_only) {
+          /* keep connection open for application to use the socket */
+          easy->easy_conn->bits.close = FALSE;
+          multistate(easy, CURLM_STATE_DONE);
+          easy->result = CURLE_OK;
+          result = CURLM_OK;
         }
         else {
-          /* failure detected */
-          Curl_posttransfer(easy->easy_handle);
-          Curl_done(&easy->easy_conn, easy->result);
-          Curl_disconnect(easy->easy_conn); /* close the connection */
-          easy->easy_conn = NULL;           /* no more connection */
+          /* Perform the protocol's DO action */
+          easy->result = Curl_do(&easy->easy_conn, &dophase_done);
+
+          if(CURLE_OK == easy->result) {
+
+            if(!dophase_done) {
+              /* DO was not completed in one function call, we must continue
+                 DOING... */
+              multistate(easy, CURLM_STATE_DOING);
+              result = CURLM_OK;
+            }
+
+            /* after DO, go PERFORM... or DO_MORE */
+            else if(easy->easy_conn->bits.do_more) {
+              /* we're supposed to do more, but we need to sit down, relax
+                 and wait a little while first */
+              multistate(easy, CURLM_STATE_DO_MORE);
+              result = CURLM_OK;
+            }
+            else {
+              /* we're done with the DO, now PERFORM */
+              easy->result = Curl_readwrite_init(easy->easy_conn);
+              if(CURLE_OK == easy->result) {
+                multistate(easy, CURLM_STATE_PERFORM);
+                result = CURLM_CALL_MULTI_PERFORM;
+              }
+            }
+          }
+          else {
+            /* failure detected */
+            Curl_posttransfer(easy->easy_handle);
+            Curl_done(&easy->easy_conn, easy->result);
+            Curl_disconnect(easy->easy_conn); /* close the connection */
+            easy->easy_conn = NULL;           /* no more connection */
+          }
         }
         break;
 
